# master-thesis

./: .gitignore  README.md  dev.ipynb  pyproject.toml
entsoe_no_experiment/: metrics.csv  metrics_validation_summary.csv  raw_na_report.csv  shap_importance.csv
master_thesis/: __init__.py  config.py  constants.py  data.py  features.py  modeling.py  orchestration.py  pipeline.py  utils.py
