[project]
name = "master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "entsoe-py>=0.7.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy==2.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "shap>=0.49.1",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
